syntax = "proto3";

package resources.dispatch;

import "resources/dispatch/units.proto";
import "resources/timestamp/timestamp.proto";
import "resources/users/users.proto";
import "validate/validate.proto";

option go_package = "github.com/galexrt/fivenet/gen/go/proto/resources/dispatch;dispatch";

message Dispatch {
  uint64 id = 1; // @gotags: sql:"primary_key" alias:"id"
  optional resources.timestamp.Timestamp created_at = 2;
  optional resources.timestamp.Timestamp updated_at = 3;
  string job = 4 [(validate.rules).string.max_len = 20];
  optional DispatchStatus status = 5;
  // @sanitize
  string message = 7 [(validate.rules).string.max_len = 255];
  // @sanitize
  optional string description = 8 [(validate.rules).string.max_len = 1024];
  optional Attributes attributes = 9;
  double x = 10;
  double y = 11;
  // @sanitize
  optional string postal = 12  [(validate.rules).string.max_len = 48];
  bool anon = 13;
  optional int32 user_id = 14 [(validate.rules).int32.gt = 0];
  optional resources.users.User user = 15;
  repeated DispatchAssignment units = 16;
}

message Attributes {
  repeated string list = 1;
}

message DispatchAssignments {
  uint64 dispatch_id = 1;
  string job = 2 [(validate.rules).string.max_len = 20];
  repeated DispatchAssignment units = 3;
}

message DispatchAssignment {
  uint64 dispatch_id = 1; // @gotags: sql:"primary_key" alias:"dispatch_id"
  uint64 unit_id = 2; // @gotags: sql:"primary_key" alias:"unit_id"
  optional resources.dispatch.Unit unit = 3;
  optional resources.timestamp.Timestamp created_at = 4;
  optional resources.timestamp.Timestamp expires_at = 5;
}

enum DISPATCH_STATUS {
  NEW = 0;
  UNASSIGNED = 1;
  UPDATED = 2;
  UNIT_ASSIGNED = 3;
  UNIT_UNASSIGNED = 4;
  EN_ROUTE = 5;
  ON_SCENE = 6;
  NEED_ASSISTANCE = 7;
  COMPLETED = 8;
  CANCELLED = 9;
  ARCHIVED = 10;
}

message DispatchStatus {
  uint64 id = 1; // @gotags: sql:"primary_key" alias:"id"
  optional resources.timestamp.Timestamp created_at = 2;
  uint64 dispatch_id = 3;
  optional uint64 unit_id = 4;
  optional resources.dispatch.Unit unit = 5;
  DISPATCH_STATUS status = 6 [(validate.rules).enum.defined_only = true];
  // @sanitize
  optional string reason = 7 [(validate.rules).string.max_len = 255];
  // @sanitize
  optional string code = 8 [(validate.rules).string.max_len = 20];
  optional int32 user_id = 9 [(validate.rules).int32.gt = 0];
  optional resources.users.UserShort user = 10;
  optional double x = 11;
  optional double y = 12;
  // @sanitize
  optional string postal = 13  [(validate.rules).string.max_len = 48];
}
